--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ dependencies {
 	//H2 데이터베이스 추가
 	runtimeOnly 'com.h2database:h2'
 
-	//MyBatis 스프링 부트 3.0 추가
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+	//MyBatis 추가
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
